--- a/static/build.xml
+++ b/static/build.xml
@@ -24,6 +24,15 @@
             <path path="js/common/base.js"></path>
             <path path="js/driver/detail.js"></path>
         </concat>
+        <concat destfile="js/app/driver.mapLink.js" encoding="utf8">
+            <path path="js/lib/zepto.js"></path>
+            <path path="js/lib/sui/sm.min.js"></path>
+            <path path="js/lib/mustache/mustache.min.js"></path>
+            <path path="js/common/config.js"></path>
+        	<path path="js/common/aman.core.js"></path>
+            <path path="js/common/base.js"></path>
+            <path path="js/driver/mapLink.js"></path>
+        </concat>
         <concat destfile="js/app/driver.site.js" encoding="utf8">
             <path path="js/lib/zepto.js"></path>
             <path path="js/lib/sui/sm.js"></path>
